infra-k8s/animekr/animekr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: animekr-api
  namespace: animekr
  labels:
    app: animekr-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: animekr-api
  template:
    metadata:
      labels:
        app: animekr-api
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - animekr-api
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - name: animekr-api
          image: ghcr.io/giggle-projects/anime-kr:0.0.1
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 1Gi
            limits:
              memory: 1Gi
#          startupProbe:
#            httpGet:
#              path: /actuator/health/liveness
#              port: 8080
#            failureThreshold: 20
#            periodSeconds: 10
#          livenessProbe:
#            httpGet:
#              path: /actuator/health
#              port: 8080
#            failureThreshold: 20
#            periodSeconds: 120
